cluster/services/librephotos.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: librephotos
spec:
  selector:
    matchLabels:
      run: librephotos
  replicas: 1
  template:
    metadata:
      labels:
        run: librephotos
    spec:
      volumes:
      - name: nfs
        persistentVolumeClaim:
          claimName: nfs-claim
      containers:
      - name: librephotos-redis
        image: redis:6
      - name: frontend
        image: reallibrephotos/librephotos-frontend:dev
      - name: postgres
        image: postgres:13
        command: 
          - docker-entrypoint.sh
          - -cfsync=false
          - -csynchronous_commit=false 
          - -cfull_page_writes=false 
          - -crandom_page_cost=1.0
        volumeMounts:
          - name: nfs
            mountPath: "/var/lib/postgresql/data"
            subPath: ".docker/config/postgres"
          
      - name: proxy
        image: reallibrephotos/librephotos-proxy:dev
        volumeMounts:
          - name: nfs
            mountPath: "/data"
            subPath: "nextcloud/ohthehugemantee/files/archive/Photos"
          - name: nfs
            mountPath: "/protected_media"
            subPath: ".docker/config/librephotos/protected_media"
        ports:
          - containerPort: 3000
            name: http
            protocol: TCP
      - name: librephotos-backend
        image: reallibrephotos/librephotos:dev
        volumeMounts:
        - name: nfs
          mountPath: "/data"
          subPath: "nextcloud/ohthehugemantee/files/archive/Photos"
        - name: nfs
          mountPath: "/protected_media"
          subPath: ".docker/config/librephotos/protected_media"
        - name: nfs
          mountPath: "/logs"
          subPath: ".docker/config/librephotos/logs"
        - name: nfs
          mountPath: "/cache"
          subPath: ".docker/config/librephotos/cache"

---
apiVersion: v1
kind: Service
metadata:
  name: librephotos
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    run: librephotos
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: librephotos
  annotations:
    traefik.frontend.priority: "2"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/hsts-max-age: "15552000"
    ingress.kubernetes.io/hsts-include-subdomains: "true"
    ingress.kubernetes.io/hsts-preload: "true"
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  rules:
  - host: librephotos.germany.vertesi.com
    http:
      paths:
      - backend:
          serviceName: librephotos
          servicePort: http
        path: /
  tls:
  - hosts:
    - librephotos.germany.vertesi.com
    secretName: librephotos-germany-vertesi-com-tls
